crates/plotnik-lib/tests/03-analyze/direct_recursion/no_escape_in_sequence.txt
E = (call
  {
    (a)
    (E)
  }
)
------------------ DIAGNOSTICS -------------------
error: infinite recursion: no escape path
 --> query.ptk:4:6
  |
4 |     (E)
  |      ^
  |      |
  |      E references itself
  |
help: add a non-recursive branch to terminate: `[Base: ... Rec: (Self)]`
-------------------- SYMBOLS ---------------------
E
  E (cycle)
